--- a/package.json
+++ b/package.json
@@ -1,32 +1,21 @@
 {
-  "name": "figuncy",
+  "name": "telegrambot",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --experimental-modules index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.25.2",
-    "@types/node": "^18.7.16",
-    "@types/node-cron": "^3.0.4",
-    "@types/node-notifier": "^8.0.2",
-    "nodemon": "^2.0.19",
-    "telegraf": "^3.37.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.3",
-    "isomorphic-unfetch": "^3.1.0",
     "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.1",
-    "node-notifier": "^10.0.1",
     "node-telegram-bot-api": "^0.61.0",
     "playwright": "^1.33.0"
   }
